--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "repository": "",
   "license": "MIT",
   "devDependencies": {    
-    "bower": "^1.3.1"
+    "bower": "^1.3.1",
+    "gulp": "^3.9.1"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "test": "gulp test"
   }
 }
